# KDP-Algoritmai

./: .gitignore  .prettierrc.json  BENCHMARKS.md  Cargo.toml  PLAN.md  README.md  brute-force-solve-problems.ts  compare-brute-force-results.ts  generate-charts.ts  generate-data.ts  generate-illustrations.py  generate-illustrations.ts  generate-problems.ts  package.json  plot_benchmark.py  pnpm-lock.yaml  tsconfig.json  tune-psa.ts  visualize_data.py  vite.config.ts  vitest.config.ts
.github/workflows/: rust.yml
crates/napi-bridge/: .gitattributes  Cargo.toml  index.d.ts  index.js  package.json  pnpm-lock.yaml
crates/napi-bridge/benchmark/: bench.ts
crates/napi-bridge/src/: lib.rs  wire.rs
crates/vrppd-bounds/: Cargo.toml
crates/vrppd-bounds/src/: direct.rs  lib.rs  lp.rs
crates/vrppd-bounds/tests/: bf_tightness.rs  lp_tightness.rs
crates/vrppd-bounds/tests/fixtures/: two_vehicles_three_orders.json
crates/vrppd-brute-force/: Cargo.toml
crates/vrppd-brute-force/src/: context.rs  lib.rs  tsp.rs  types.rs
crates/vrppd-brute-force/tests/: golden.rs
crates/vrppd-brute-force/tests/fixtures/: single_vehicle_single_order.json
crates/vrppd-cea/: Cargo.toml
crates/vrppd-cea/src/: coevolve.rs  config.rs  crossover.rs  fitness.rs  lib.rs  local_improvement.rs  population.rs  recombination.rs  reproduction.rs  rscim.rs
crates/vrppd-cea/tests/: cea_quality.rs
crates/vrppd-core/: Cargo.toml
crates/vrppd-core/src/: distance.rs  lib.rs  model.rs  working.rs
crates/vrppd-milp/: Cargo.toml
crates/vrppd-milp/src/: lib.rs
crates/vrppd-milp/tests/: bf_match.rs
crates/vrppd-psa/: Cargo.toml
crates/vrppd-psa/src/: config.rs  lib.rs  matrix.rs  operators.rs  pipeline.rs  rcrs.rs  sa.rs  solution.rs
crates/vrppd-psa/tests/: sa_quality.rs
crates/vrppd-validation/: Cargo.toml
documents/: CEA_adaptation_notes.md  MILP_adaptation_notes.md
rust-solver/: .gitattributes  Cargo.toml  index.d.ts  index.js  package.json  pnpm-lock.yaml
rust-solver/__test__/: index.spec.ts
rust-solver/src/: lib.rs  models.rs  utils.rs  wire.rs
rust-solver/src/solver/: context.rs  mod.rs  tsp.rs  types.rs
scripts/: compare-results.ts  parity-smoke.ts
src/: base.ts  env.d.ts  factory.ts  index.ts  jitWarmup.ts  tune-psa.ts  types.ts
src/algorithms/: brute-force.ts  interfaces.ts
src/algorithms/bounds/: index.ts
src/algorithms/brute-force/: README.md  brute-force.test.ts  followRoute.ts  generateAllOrderAssignments.ts  generateAllVehicleRoutes.ts  index.ts  iterateAllSubsets.ts  utils.ts
src/algorithms/brute-force/unoptimized/: followRoute.ts  generateAllOrderAssignments.ts  generateAllVehicleRoutes.ts  index.ts
src/algorithms/cea/: index.ts
src/algorithms/milp/: index.ts
src/algorithms/p-sa/: index.ts  p-sa.worker.ts  rcrs.ts
src/benchmark/: suite.ts
src/problems/: bad_empty_goal_2v2o.json  small_2v3o.json  small_2v4o.json
src/types/: algorithm.ts  benchmark.ts  problem-json.ts  problem.ts  types.ts
src/utils/: DistanceMatrix.ts  date-utils.ts  distance.ts  euclideanDistanceCalculator.ts  greatCircleDistanceCalculator.ts  problem-loader.ts
