[workspace]
resolver = "2"
members = [
  "crates/vrppd-core",
  "crates/vrppd-brute-force",
  "rust-solver",
]

[workspace.package]
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/AlexShukel/KDP-Algoritmai"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vrppd-core = { path = "crates/vrppd-core" }
vrppd-brute-force = { path = "crates/vrppd-brute-force" }

[profile.release]
lto = true
strip = "symbols"
