[workspace]
resolver = "2"
members = [
  "crates/vrppd-core",
  "crates/vrppd-brute-force",
  "crates/vrppd-psa",
  "crates/napi-bridge",
]

[workspace.package]
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/AlexShukel/KDP-Algoritmai"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_xoshiro = "0.6"
crossbeam-channel = "0.5"
vrppd-core = { path = "crates/vrppd-core" }
vrppd-brute-force = { path = "crates/vrppd-brute-force" }
vrppd-psa = { path = "crates/vrppd-psa" }

[profile.release]
lto = true
strip = "symbols"
