[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
name = "rust_solver"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
vrppd-core = { workspace = true }
vrppd-brute-force = { workspace = true }

[build-dependencies]
napi-build = "2"
