[package]
name = "vrppd-bounds"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Lower bounds for the specific VRPPD variant. Direct-sum bound now; LP-relaxation bound in a follow-up. Adaptation map between the original MILP and the implemented problem lives in documents/MILP_adaptation_notes.md."

[dependencies]
vrppd-core = { workspace = true }
good_lp = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
vrppd-brute-force = { workspace = true }
