[package]
name = "vrppd-brute-force"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Exact brute-force solver for the specific VRPPD variant: enumerates vehicle-order assignments with branch-and-bound and a bitmask-DP TSP per assignment."

[dependencies]
vrppd-core = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
