[package]
name = "vrppd-cea"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Coevolutionary Algorithm (CEA) for the specific VRPPD variant. Two co-evolving populations with diversification (Pop I) and intensification (Pop II), based on Wang & Chen (2013) IJPE 141 with adaptations documented in documents/CEA_adaptation_notes.md."

[dependencies]
vrppd-core = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
vrppd-brute-force = { workspace = true }
