[package]
name = "vrppd-psa"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Parallel Simulated Annealing solver for the specific VRPPD variant. Single-threaded driver only in this crate version; multi-thread island/pipeline lands in a follow-up."

[dependencies]
vrppd-core = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
vrppd-brute-force = { workspace = true }
