[package]
name = "vrppd-validation"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Empirical validation harness for the lower bounds and exact MILP solver. Produces the per-instance soundness/tightness CSV that PLAN.md §3.4 requires for the thesis bounds chapter."

[dependencies]
vrppd-core = { workspace = true }
vrppd-brute-force = { workspace = true }
vrppd-bounds = { workspace = true }
vrppd-milp = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "bound-sweep"
path = "src/bin/bound_sweep.rs"
